2008-10-07  Sven Herzberg  <sven@imendio.com>

	Use the DhAssistantView's DhBase

	* src/dh-assistant.c: drop the own DhBase reference; use the one from
	the DhAssistantView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added a getter for the DhBase

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added a getter, so we can get rid of the
	DhBase in DhAssistant

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added a DhBase field to the DhAssistantView

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added the field to the view (for the code
	moving)
	* src/dh-assistant.c: set the base of the DhAssistantView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Implemented the DhAssistantView type (with blind type prototypes)

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: implement DhAssistantView; put the struct
	definitions into the .c file so we don't have to include webkit in the
	header
	* src/dh-assistant.c: use the new DhAssistantView instead of a plain
	WebKitWebView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added source files for the assistant view

	* src/Makefile.am: distribute and compile the new sources; install the
	header
	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: new skeleton files

2008-10-08  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (dh_parser_read_file): Remove unnecessary
	checks.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (dh_keyword_model_set_words): A bit
	bigger commit than I wanted... Split out the actual searching to
	make the code a little clearer. Remove the last remains of the old
	book/page searching, and move out allocating/freeing the search
	terms from the inner search loop. Only check for one exact hit..

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Whitespace and comment fixes.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_iter),